# kxc-melange-react-native-template

./: .gitignore  NOTICES  README.md  dune  dune-project  kxc-melange-react-native-template.opam
.github/workflows/: common.yml
extra-libs/kxc-melange-react-helpers/: README.md
extra-libs/kxc-melange-react-helpers/compile-test/: dune
extra-libs/kxc-melange-react-helpers/react-js/: dune  kxc_react_helpers.ml
extra-libs/kxc-melange-react-helpers/react-native/: dune  kxc_react_native_helpers.ml
jsland/: dune  package.json  turbo.json
jsland/apps/mobile-app/: .eslintrc.json  App.tsx  app.json  index.js  metro.config.js  package.json
jsland/apps/mobile-app/android/: settings.gradle
jsland/apps/mobile-app/android/app/: build.gradle
jsland/apps/mobile-app/android/app/src/main/res/values/: strings.xml
jsland/apps/mobile-app/appsrc/: App.tsx
jsland/apps/mobile-app/appsrc/components/: IntroHeader.tsx
jsland/apps/mobile-app/ios/: .xcode.env  Podfile
jsland/apps/mobile-app/ios/MelangeRNTemplate/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
jsland/apps/mobile-app/ios/MelangeRNTemplate.xcodeproj/: project.pbxproj
jsland/apps/mobile-app/ios/MelangeRNTemplate.xcodeproj/xcshareddata/xcschemes/: MelangeRNTemplate.xcscheme
jsland/apps/mobile-app/ios/MelangeRNTemplate.xcworkspace/: contents.xcworkspacedata
jsland/apps/mobile-app/ios/MelangeRNTemplateTests/: MelangeRNTemplateTests.m
jsland/apps/mobile-app/melsrc/: bridge.ts  dune  entrypoint.ml
vendors/reason-react-ppx/: dune  reactjs_jsx_ppx.ml
(+4 files in other folders)
